Update Dependencies with Support Durian Durian DNS Resolver.

--- a/shard.yml
+++ b/shard.yml
@@ -4,6 +4,8 @@ version: 0.1.0
 dependencies:
   papaya:
     github: 636f7374/papaya.cr
+  durian:
+    github: 636f7374/durian.cr
 
 authors:
   - 636f7374
